--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="./js/javascript.js"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap-select-country.min.css">
 </head>
 
 <body>
     <!-- Navigation bar -->
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="">
         <!-- Brand/logo -->
-        <a class="navbar-brand" href="#">
-            <img src="bird.jpg" alt="logo" style="width:40px;">
+        <a class="" href="#">
+            <img src="./css/images/nnmb2.png" alt="logo" style="width:100%;">
         </a>
 
         <!-- Links -->
-        <ul class="navbar-nav">
+        <!-- <ul class=" navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#">Link 1</a>
             </li>
@@ -33,7 +34,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Link 3</a>
             </li>
-        </ul>
+            </ul> -->
     </nav>
 
     <!-- Form -->
@@ -134,12 +135,51 @@
             <h5>Country:</h5>
             <hr>
             <div class="form-group row bottommargin">
-                <input type="text" class="form-control" placeholder="Enter the country" name="country">
+                <select class="selectpicker countrypicker" data-live-search="true" data-flag="true"></select>
+                <!-- <input type="text" class="form-control" placeholder="Enter the country" name="country"> -->
             </div>
             <h5>State:</h5>
             <hr>
             <div class="form-group row bottommargin">
-                <input type="text" class="form-control" placeholder="Enter the state" name="state">
+                <select name="state" id="state" class="form-control">
+                    <option value="Andhra Pradesh">Andhra Pradesh</option>
+                    <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+                    <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                    <option value="Assam">Assam</option>
+                    <option value="Bihar">Bihar</option>
+                    <option value="Chandigarh">Chandigarh</option>
+                    <option value="Chhattisgarh">Chhattisgarh</option>
+                    <option value="Dadar and Nagar Haveli">Dadar and Nagar Haveli</option>
+                    <option value="Daman and Diu">Daman and Diu</option>
+                    <option value="Delhi">Delhi</option>
+                    <option value="Lakshadweep">Lakshadweep</option>
+                    <option value="Puducherry">Puducherry</option>
+                    <option value="Goa">Goa</option>
+                    <option value="Gujarat">Gujarat</option>
+                    <option value="Haryana">Haryana</option>
+                    <option value="Himachal Pradesh">Himachal Pradesh</option>
+                    <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+                    <option value="Jharkhand">Jharkhand</option>
+                    <option value="Karnataka">Karnataka</option>
+                    <option value="Kerala">Kerala</option>
+                    <option value="Madhya Pradesh">Madhya Pradesh</option>
+                    <option value="Maharashtra">Maharashtra</option>
+                    <option value="Manipur">Manipur</option>
+                    <option value="Meghalaya">Meghalaya</option>
+                    <option value="Mizoram">Mizoram</option>
+                    <option value="Nagaland">Nagaland</option>
+                    <option value="Odisha">Odisha</option>
+                    <option value="Punjab">Punjab</option>
+                    <option value="Rajasthan">Rajasthan</option>
+                    <option value="Sikkim">Sikkim</option>
+                    <option value="Tamil Nadu">Tamil Nadu</option>
+                    <option value="Telangana">Telangana</option>
+                    <option value="Tripura">Tripura</option>
+                    <option value="Uttar Pradesh">Uttar Pradesh</option>
+                    <option value="Uttarakhand">Uttarakhand</option>
+                    <option value="West Bengal">West Bengal</option>
+                </select>
+                <!-- <input type="text" class="form-control" placeholder="Enter the state" name="state"> -->
             </div>
 
             <h5>District:</h5>
@@ -216,6 +256,17 @@
     </div>
 
 
+
+
+
+
+    <!--Scripts-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="js/bootstrap-select-country.min.js"></script>
+    <!--  -->
 </body>
 
 </html>
